[package]
name = "json_parser_hibskyi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simplified JSON parser written in Rust using the Pest parsing library."
authors = ["Hibskyi Vladyslav"]

[dependencies]
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
structopt = "0.3.26"
thiserror = "2.0.2"
